imp: working on AuthKeyPari generation if there is no public & private key